-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.10.2
-
Windows/Linux host and QNX device
-
-
dd7d50bc5321e639b9b14e7125e1e3b509cd14c8 (qt-creator/qt-creator/master)
Running an application on a QNX device results in: "Failed to retrieve remote timestamp for file "/tmp/qnxdeploytest/bin/qnxdeploytest". Incremental deployment will not work. Error message was: sh: stat: cannot execute - No such file or directory"
QNX doesn't have a stat, so it's wrong to try to run it.
Since QNX deployment is based on Remote Linux deployment, changes there regarding stat may have caused it.
It may be related to: https://bugreports.qt.io/browse/QTCREATORBUG-22603