Qnx: Do not offer incremental deployment

We don't know of a way to retrieve machine-readable file timestamps on
that system.

Fixes: QTCREATORBUG-23429
Change-Id: Ib33b09e7dffaa296cf1dc44dd5b4b41821e44e3a
Reviewed-by: hjk <hjk@qt.io>